deploy: 90094907eba0ee0c8a6a716fa3adc281cb9528ad

--- a/hp/poc-detect-pure-violation/_modules/gstaichi/lang/ast/ast_transformer_utils.html
+++ b/hp/poc-detect-pure-violation/_modules/gstaichi/lang/ast/ast_transformer_utils.html
@@ -329,12 +329,35 @@
     <span class="n">GsTaichiSyntaxError</span><span class="p">,</span>
     <span class="n">handle_exception_from_cpp</span><span class="p">,</span>
 <span class="p">)</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">gstaichi.lang.util</span><span class="w"> </span><span class="kn">import</span> <span class="n">is_data_oriented</span>
 
 <span class="k">if</span> <span class="n">TYPE_CHECKING</span><span class="p">:</span>
     <span class="kn">from</span><span class="w"> </span><span class="nn">gstaichi.lang.kernel_impl</span><span class="w"> </span><span class="kn">import</span> <span class="p">(</span>
         <span class="n">Func</span><span class="p">,</span>
         <span class="n">Kernel</span><span class="p">,</span>
     <span class="p">)</span>
+
+
+<div class="viewcode-block" id="PtrSource">
+<a class="viewcode-back" href="../../../../autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.PtrSource">[docs]</a>
+<span class="k">class</span><span class="w"> </span><span class="nc">PtrSource</span><span class="p">(</span><span class="n">Enum</span><span class="p">):</span>
+<div class="viewcode-block" id="PtrSource.GLOBAL">
+<a class="viewcode-back" href="../../../../autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.PtrSource.GLOBAL">[docs]</a>
+    <span class="n">GLOBAL</span> <span class="o">=</span> <span class="mi">1</span></div>
+
+<div class="viewcode-block" id="PtrSource.TEMPLATE">
+<a class="viewcode-back" href="../../../../autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.PtrSource.TEMPLATE">[docs]</a>
+    <span class="n">TEMPLATE</span> <span class="o">=</span> <span class="mi">2</span></div>
+
+<div class="viewcode-block" id="PtrSource.BUILTIN">
+<a class="viewcode-back" href="../../../../autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.PtrSource.BUILTIN">[docs]</a>
+    <span class="n">BUILTIN</span> <span class="o">=</span> <span class="mi">3</span></div>
+
+<div class="viewcode-block" id="PtrSource.LOCAL">
+<a class="viewcode-back" href="../../../../autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.PtrSource.LOCAL">[docs]</a>
+    <span class="n">LOCAL</span> <span class="o">=</span> <span class="mi">4</span></div>
+</div>
+
 
 
 <div class="viewcode-block" id="Builder">
@@ -349,7 +372,10 @@
                 <span class="k">raise</span> <span class="n">GsTaichiSyntaxError</span><span class="p">(</span><span class="n">error_msg</span><span class="p">)</span>
             <span class="n">info</span> <span class="o">=</span> <span class="n">ctx</span><span class="o">.</span><span class="n">get_pos_info</span><span class="p">(</span><span class="n">node</span><span class="p">)</span> <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">node</span><span class="p">,</span> <span class="p">(</span><span class="n">ast</span><span class="o">.</span><span class="n">stmt</span><span class="p">,</span> <span class="n">ast</span><span class="o">.</span><span class="n">expr</span><span class="p">))</span> <span class="k">else</span> <span class="s2">&quot;&quot;</span>
             <span class="k">with</span> <span class="n">impl</span><span class="o">.</span><span class="n">get_runtime</span><span class="p">()</span><span class="o">.</span><span class="n">src_info_guard</span><span class="p">(</span><span class="n">info</span><span class="p">):</span>
-                <span class="k">return</span> <span class="n">method</span><span class="p">(</span><span class="n">ctx</span><span class="p">,</span> <span class="n">node</span><span class="p">)</span>
+                <span class="n">res</span> <span class="o">=</span> <span class="n">method</span><span class="p">(</span><span class="n">ctx</span><span class="p">,</span> <span class="n">node</span><span class="p">)</span>
+                <span class="k">if</span> <span class="ow">not</span> <span class="nb">hasattr</span><span class="p">(</span><span class="n">node</span><span class="p">,</span> <span class="s2">&quot;ptr_source&quot;</span><span class="p">):</span>
+                    <span class="n">node</span><span class="o">.</span><span class="n">ptr_source</span> <span class="o">=</span> <span class="n">PtrSource</span><span class="o">.</span><span class="n">LOCAL</span>
+                <span class="k">return</span> <span class="n">res</span>
         <span class="k">except</span> <span class="ne">Exception</span> <span class="k">as</span> <span class="n">e</span><span class="p">:</span>
             <span class="k">if</span> <span class="n">impl</span><span class="o">.</span><span class="n">get_runtime</span><span class="p">()</span><span class="o">.</span><span class="n">print_full_traceback</span><span class="p">:</span>
                 <span class="k">raise</span> <span class="n">e</span>
@@ -566,6 +592,8 @@
         <span class="n">func</span><span class="p">:</span> <span class="s2">&quot;Func | Kernel&quot;</span><span class="p">,</span>
         <span class="n">arg_features</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">[</span><span class="n">Any</span><span class="p">,</span> <span class="o">...</span><span class="p">]]</span> <span class="o">|</span> <span class="kc">None</span><span class="p">,</span>
         <span class="n">global_vars</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">],</span>
+        <span class="n">template_vars</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">],</span>
+        <span class="n">is_pure</span><span class="p">:</span> <span class="nb">bool</span><span class="p">,</span>
         <span class="n">argument_data</span><span class="p">,</span>
         <span class="n">file</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
         <span class="n">src</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">],</span>
@@ -604,6 +632,14 @@
 <div class="viewcode-block" id="ASTTransformerContext.global_vars">
 <a class="viewcode-back" href="../../../../autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.global_vars">[docs]</a>
         <span class="bp">self</span><span class="o">.</span><span class="n">global_vars</span> <span class="o">=</span> <span class="n">global_vars</span></div>
+
+<div class="viewcode-block" id="ASTTransformerContext.template_vars">
+<a class="viewcode-back" href="../../../../autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.template_vars">[docs]</a>
+        <span class="bp">self</span><span class="o">.</span><span class="n">template_vars</span> <span class="o">=</span> <span class="n">template_vars</span></div>
+
+<div class="viewcode-block" id="ASTTransformerContext.is_pure">
+<a class="viewcode-back" href="../../../../autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.is_pure">[docs]</a>
+        <span class="bp">self</span><span class="o">.</span><span class="n">is_pure</span> <span class="o">=</span> <span class="n">is_pure</span></div>
 
 <div class="viewcode-block" id="ASTTransformerContext.argument_data">
 <a class="viewcode-back" href="../../../../autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.argument_data">[docs]</a>
@@ -791,22 +827,35 @@
 
 <div class="viewcode-block" id="ASTTransformerContext.get_var_by_name">
 <a class="viewcode-back" href="../../../../autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.get_var_by_name">[docs]</a>
-    <span class="k">def</span><span class="w"> </span><span class="nf">get_var_by_name</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Any</span><span class="p">:</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">get_var_by_name</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">tuple</span><span class="p">[</span><span class="n">PtrSource</span><span class="p">,</span> <span class="n">Any</span><span class="p">]:</span>
         <span class="k">for</span> <span class="n">s</span> <span class="ow">in</span> <span class="nb">reversed</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">local_scopes</span><span class="p">):</span>
             <span class="k">if</span> <span class="n">name</span> <span class="ow">in</span> <span class="n">s</span><span class="p">:</span>
-                <span class="k">return</span> <span class="n">s</span><span class="p">[</span><span class="n">name</span><span class="p">]</span>
-        <span class="k">if</span> <span class="n">name</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">global_vars</span><span class="p">:</span>
+                <span class="n">val</span> <span class="o">=</span> <span class="n">s</span><span class="p">[</span><span class="n">name</span><span class="p">]</span>
+                <span class="n">ptr_source</span> <span class="o">=</span> <span class="n">PtrSource</span><span class="o">.</span><span class="n">LOCAL</span>
+                <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">is_pure</span> <span class="ow">and</span> <span class="n">is_data_oriented</span><span class="p">(</span><span class="n">val</span><span class="p">):</span>
+                    <span class="c1"># a data oriented is as good as global, from pov of pure constraints</span>
+                    <span class="n">ptr_source</span> <span class="o">=</span> <span class="n">PtrSource</span><span class="o">.</span><span class="n">GLOBAL</span>
+                <span class="k">return</span> <span class="n">ptr_source</span><span class="p">,</span> <span class="n">val</span>
+
+        <span class="n">ptr_source</span> <span class="o">=</span> <span class="kc">None</span>
+        <span class="k">if</span> <span class="n">name</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">template_vars</span><span class="p">:</span>
+            <span class="n">var</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">template_vars</span><span class="p">[</span><span class="n">name</span><span class="p">]</span>
+            <span class="n">ptr_source</span> <span class="o">=</span> <span class="n">PtrSource</span><span class="o">.</span><span class="n">TEMPLATE</span>
+        <span class="k">elif</span> <span class="n">name</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">global_vars</span><span class="p">:</span>
             <span class="n">var</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">global_vars</span><span class="p">[</span><span class="n">name</span><span class="p">]</span>
+            <span class="n">ptr_source</span> <span class="o">=</span> <span class="n">PtrSource</span><span class="o">.</span><span class="n">GLOBAL</span>
+
+        <span class="k">if</span> <span class="n">ptr_source</span><span class="p">:</span>
             <span class="kn">from</span><span class="w"> </span><span class="nn">gstaichi.lang.matrix</span><span class="w"> </span><span class="kn">import</span> <span class="p">(</span>  <span class="c1"># pylint: disable-msg=C0415</span>
                 <span class="n">Matrix</span><span class="p">,</span>
                 <span class="n">make_matrix</span><span class="p">,</span>
             <span class="p">)</span>
 
             <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">var</span><span class="p">,</span> <span class="n">Matrix</span><span class="p">):</span>
-                <span class="k">return</span> <span class="n">make_matrix</span><span class="p">(</span><span class="n">var</span><span class="o">.</span><span class="n">to_list</span><span class="p">())</span>
-            <span class="k">return</span> <span class="n">var</span>
+                <span class="k">return</span> <span class="n">ptr_source</span><span class="p">,</span> <span class="n">make_matrix</span><span class="p">(</span><span class="n">var</span><span class="o">.</span><span class="n">to_list</span><span class="p">())</span>
+            <span class="k">return</span> <span class="n">ptr_source</span><span class="p">,</span> <span class="n">var</span>
         <span class="k">try</span><span class="p">:</span>
-            <span class="k">return</span> <span class="nb">getattr</span><span class="p">(</span><span class="n">builtins</span><span class="p">,</span> <span class="n">name</span><span class="p">)</span>
+            <span class="k">return</span> <span class="n">PtrSource</span><span class="o">.</span><span class="n">BUILTIN</span><span class="p">,</span> <span class="nb">getattr</span><span class="p">(</span><span class="n">builtins</span><span class="p">,</span> <span class="n">name</span><span class="p">)</span>
         <span class="k">except</span> <span class="ne">AttributeError</span><span class="p">:</span>
             <span class="k">raise</span> <span class="n">GsTaichiNameError</span><span class="p">(</span><span class="sa">f</span><span class="s1">&#39;Name &quot;</span><span class="si">{</span><span class="n">name</span><span class="si">}</span><span class="s1">&quot; is not defined&#39;</span><span class="p">)</span></div>
 
