--- a/hp/poc-detect-pure-violation/_modules/gstaichi/lang/kernel_impl.html
+++ b/hp/poc-detect-pure-violation/_modules/gstaichi/lang/kernel_impl.html
@@ -621,16 +621,15 @@
     <span class="n">current_kernel</span><span class="o">.</span><span class="n">visited_functions</span><span class="o">.</span><span class="n">add</span><span class="p">(</span><span class="n">function_source_info</span><span class="p">)</span>
 
     <span class="n">gstaichi_callable</span> <span class="o">=</span> <span class="n">current_kernel</span><span class="o">.</span><span class="n">gstaichi_callable</span>
-    <span class="k">if</span> <span class="n">gstaichi_callable</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span> <span class="ow">and</span> <span class="n">gstaichi_callable</span><span class="o">.</span><span class="n">is_pure</span><span class="p">:</span>
-        <span class="n">global_vars</span> <span class="o">=</span> <span class="p">{</span><span class="n">k</span><span class="p">:</span> <span class="n">v</span> <span class="k">for</span> <span class="n">k</span><span class="p">,</span> <span class="n">v</span> <span class="ow">in</span> <span class="n">_get_global_vars</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">func</span><span class="p">)</span><span class="o">.</span><span class="n">items</span><span class="p">()</span> <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">v</span><span class="p">,</span> <span class="n">Callable</span><span class="p">)}</span>
-    <span class="k">else</span><span class="p">:</span>
-        <span class="n">global_vars</span> <span class="o">=</span> <span class="n">_get_global_vars</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">func</span><span class="p">)</span>
+    <span class="n">is_pure</span> <span class="o">=</span> <span class="n">gstaichi_callable</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span> <span class="ow">and</span> <span class="n">gstaichi_callable</span><span class="o">.</span><span class="n">is_pure</span>
+    <span class="n">global_vars</span> <span class="o">=</span> <span class="n">_get_global_vars</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">func</span><span class="p">)</span>
 
+    <span class="n">template_vars</span> <span class="o">=</span> <span class="p">{}</span>
     <span class="k">if</span> <span class="n">is_kernel</span> <span class="ow">or</span> <span class="n">is_real_function</span><span class="p">:</span>
         <span class="n">_populate_global_vars_for_templates</span><span class="p">(</span>
             <span class="n">template_slot_locations</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">template_slot_locations</span><span class="p">,</span>
             <span class="n">argument_metas</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">arg_metas</span><span class="p">,</span>
-            <span class="n">global_vars</span><span class="o">=</span><span class="n">global_vars</span><span class="p">,</span>
+            <span class="n">global_vars</span><span class="o">=</span><span class="n">template_vars</span><span class="p">,</span>
             <span class="n">fn</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">func</span><span class="p">,</span>
             <span class="n">py_args</span><span class="o">=</span><span class="n">args</span><span class="p">,</span>
         <span class="p">)</span>
@@ -638,9 +637,11 @@
     <span class="k">return</span> <span class="n">tree</span><span class="p">,</span> <span class="n">ASTTransformerContext</span><span class="p">(</span>
         <span class="n">excluded_parameters</span><span class="o">=</span><span class="n">excluded_parameters</span><span class="p">,</span>
         <span class="n">is_kernel</span><span class="o">=</span><span class="n">is_kernel</span><span class="p">,</span>
+        <span class="n">is_pure</span><span class="o">=</span><span class="n">is_pure</span><span class="p">,</span>
         <span class="n">func</span><span class="o">=</span><span class="bp">self</span><span class="p">,</span>
         <span class="n">arg_features</span><span class="o">=</span><span class="n">arg_features</span><span class="p">,</span>
         <span class="n">global_vars</span><span class="o">=</span><span class="n">global_vars</span><span class="p">,</span>
+        <span class="n">template_vars</span><span class="o">=</span><span class="n">template_vars</span><span class="p">,</span>
         <span class="n">argument_data</span><span class="o">=</span><span class="n">args</span><span class="p">,</span>
         <span class="n">src</span><span class="o">=</span><span class="n">src</span><span class="p">,</span>
         <span class="n">start_lineno</span><span class="o">=</span><span class="n">function_source_info</span><span class="o">.</span><span class="n">start_lineno</span><span class="p">,</span>
