--- a/hp/poc-detect-pure-violation/genindex.html
+++ b/hp/poc-detect-pure-violation/genindex.html
@@ -608,6 +608,8 @@
 </li>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.Builder">Builder (class in gstaichi.lang.ast.ast_transformer_utils)</a>
 </li>
+      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.PtrSource.BUILTIN">BUILTIN (gstaichi.lang.ast.ast_transformer_utils.PtrSource attribute)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -1009,6 +1011,8 @@
       <li><a href="autoapi/gstaichi/lang/kernel_arguments/index.html#gstaichi.lang.kernel_arguments.get_type_for_kernel_args">get_type_for_kernel_args() (in module gstaichi.lang.kernel_arguments)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.get_var_by_name">get_var_by_name() (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext method)</a>
+</li>
+      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.PtrSource.GLOBAL">GLOBAL (gstaichi.lang.ast.ast_transformer_utils.PtrSource attribute)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/misc/index.html#gstaichi.lang.misc.global_thread_idx">global_thread_idx() (in module gstaichi.lang.misc)</a>
 
@@ -1632,6 +1636,8 @@
 </li>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.is_kernel">is_kernel (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
 </li>
+      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.is_pure">is_pure (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
+</li>
       <li><a href="autoapi/gstaichi/types/utils/index.html#gstaichi.types.utils.is_real">is_real (in module gstaichi.types.utils)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.is_real_function">is_real_function (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
@@ -1740,11 +1746,13 @@
       </ul></li>
       <li><a href="autoapi/gstaichi/linalg/matrixfree_cg/index.html#gstaichi.linalg.matrixfree_cg.LinearOperator">LinearOperator (class in gstaichi.linalg.matrixfree_cg)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.lineno_offset">lineno_offset (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/lang/mesh/index.html#gstaichi.lang.mesh.Mesh.load_meta">load_meta() (gstaichi.lang.mesh.Mesh static method)</a>
+</li>
+      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.PtrSource.LOCAL">LOCAL (gstaichi.lang.ast.ast_transformer_utils.PtrSource attribute)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.local_scopes">local_scopes (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
 </li>
@@ -2201,6 +2209,8 @@
         <li><a href="autoapi/gstaichi/lang/snode/index.html#gstaichi.lang.snode.SNode.ptr">(gstaichi.lang.snode.SNode attribute)</a>
 </li>
       </ul></li>
+      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.PtrSource">PtrSource (class in gstaichi.lang.ast.ast_transformer_utils)</a>
+</li>
       <li><a href="autoapi/gstaichi/lang/shell/index.html#gstaichi.lang.shell.pybuf_enabled">pybuf_enabled (in module gstaichi.lang.shell)</a>, <a href="autoapi/gstaichi/lang/shell/index.html#id0">[1]</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/kernel_impl/index.html#gstaichi.lang.kernel_impl.pyfunc">pyfunc() (in module gstaichi.lang.kernel_impl)</a>
@@ -2555,7 +2565,11 @@
 </li>
       <li><a href="autoapi/gstaichi/types/annotations/index.html#gstaichi.types.annotations.Template">Template (class in gstaichi.types.annotations)</a>
 </li>
+      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.PtrSource.TEMPLATE">TEMPLATE (gstaichi.lang.ast.ast_transformer_utils.PtrSource attribute)</a>
+</li>
       <li><a href="autoapi/gstaichi/types/annotations/index.html#gstaichi.types.annotations.template">template (in module gstaichi.types.annotations)</a>
+</li>
+      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.template_vars">template_vars (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
 </li>
       <li><a href="autoapi/gstaichi/types/texture_type/index.html#gstaichi.types.texture_type.texture">texture (in module gstaichi.types.texture_type)</a>
 </li>
